[package]
name = "eguitexteditor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true

[features]
default = ["glow", "persistence"]
#syntax_highlighting = ["syntect"]
persistence = ["eframe/persistence", "egui/persistence", "serde"]
serde = ["dep:serde", "egui_demo_lib/serde", "egui/serde"]
syntax_highlighting = ["egui_demo_lib/syntax_highlighting"]
glow = ["eframe/glow"]
#wgpu = ["eframe/wgpu"]
wgpu = ["eframe/wgpu", "bytemuck"]
#chrono = ["egui_extras/datepicker", "dep:chrono"]
#serde = ["egui/serde", "dep:serde"]

## Enable better syntax highlighting using [`syntect`](https://docs.rs/syntect).

[dependencies]
#chrono = { version = "0.4", features = ["js-sys", "wasmbind"] }
egui = { version = "0.20.1", default-features = false }
#egui_extras = { version = "0.20.0" }
#eframe = { version = "0.20.1", default-features = false }
eframe = { version = "0.20.1" }
tracing = "0.1"
egui_demo_lib =  { version = "0.20.0", features = [] }
serde = { version = "1", optional = true, features = ["derive"] }
bytemuck = { version = "1.13.0", optional = true }


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
